[gd_scene load_steps=22 format=3 uid="uid://esp3ey8uhv7t"]

[ext_resource type="Script" path="res://scripts/systems/building.gd" id="1_akstq"]
[ext_resource type="PackedScene" uid="uid://dq8s4idfun2xu" path="res://scenes/states/building/waiting.tscn" id="3_ppb02"]
[ext_resource type="PackedScene" uid="uid://daw8idi8fjmp" path="res://scenes/states/building/construction.tscn" id="4_m5pdg"]
[ext_resource type="PackedScene" uid="uid://cwmuvduyk6h1f" path="res://scenes/states/building/open.tscn" id="5_uag46"]
[ext_resource type="PackedScene" uid="uid://btitbsdycbkic" path="res://scenes/states/building/teardown.tscn" id="6_k4bdq"]
[ext_resource type="PackedScene" uid="uid://bgrnf62cbgomf" path="res://scenes/states/building/destroy.tscn" id="7_allfj"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="8_5ewg2"]
[ext_resource type="Texture2D" uid="uid://dj0lebjfyrf21" path="res://assets/images/debug/debug_32x32.png" id="8_cwfnb"]
[ext_resource type="PackedScene" uid="uid://djmvcveo0wqpx" path="res://scenes/states/building/empty.tscn" id="8_x86ni"]
[ext_resource type="Texture2D" uid="uid://cf18whdc2u2bf" path="res://assets/images/ui/waiting_bubbles.png" id="9_8nt18"]
[ext_resource type="Texture2D" uid="uid://bll8ba5qj237n" path="res://assets/aseprite/plus.png" id="11_m3opp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xthni"]
atlas = ExtResource("9_8nt18")
region = Rect2(0, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oxfl"]
atlas = ExtResource("9_8nt18")
region = Rect2(32, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlsls"]
atlas = ExtResource("9_8nt18")
region = Rect2(64, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_81vnd"]
atlas = ExtResource("9_8nt18")
region = Rect2(96, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8cr6"]
atlas = ExtResource("9_8nt18")
region = Rect2(128, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cyeo"]
atlas = ExtResource("9_8nt18")
region = Rect2(160, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_px42i"]
atlas = ExtResource("9_8nt18")
region = Rect2(192, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_srvy5"]
atlas = ExtResource("9_8nt18")
region = Rect2(224, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhq2c"]
atlas = ExtResource("9_8nt18")
region = Rect2(256, 0, 32, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_0hlqn"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xthni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oxfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlsls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81vnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8cr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cyeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px42i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srvy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhq2c")
}],
"loop": true,
"name": &"waiting_bubbles",
"speed": 8.0
}]

[node name="Building" type="Node2D" node_paths=PackedStringArray("building_texture", "progress_bar", "waiting_dots", "state_machine", "build_button")]
texture_filter = 1
position = Vector2(280, 232)
script = ExtResource("1_akstq")
building_states = Array[PackedScene]([ExtResource("3_ppb02"), ExtResource("4_m5pdg"), ExtResource("5_uag46"), ExtResource("6_k4bdq"), ExtResource("7_allfj"), ExtResource("8_x86ni")])
building_texture = NodePath("BuildingRect")
progress_bar = NodePath("BuildingRect/Building")
waiting_dots = NodePath("BuildingRect/Waiting")
state_machine = NodePath("FiniteStateMachine")
build_button = NodePath("BuildingRect/BuildButton")

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("8_5ewg2")
current_state = NodePath("")

[node name="BuildingRect" type="TextureRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 64.0
grow_vertical = 0
texture = ExtResource("8_cwfnb")
stretch_mode = 1

[node name="Waiting" type="AnimatedSprite2D" parent="BuildingRect"]
visible = false
position = Vector2(32, 15)
sprite_frames = SubResource("SpriteFrames_0hlqn")
animation = &"waiting_bubbles"
frame_progress = 0.736147
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="Building" type="ProgressBar" parent="BuildingRect"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_top = 10.0
offset_right = 22.0
offset_bottom = 19.0
grow_horizontal = 2
step = 1.0
rounded = true
show_percentage = false

[node name="BuildButton" type="TextureButton" parent="BuildingRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
disabled = true
texture_normal = ExtResource("11_m3opp")

[connection signal="mouse_entered" from="BuildingRect" to="." method="_on_building_rect_mouse_entered"]
[connection signal="mouse_exited" from="BuildingRect" to="." method="_on_building_rect_mouse_exited"]
[connection signal="pressed" from="BuildingRect/BuildButton" to="." method="_on_build_button_pressed"]
